styles.css
@font-face {
    font-family: "thunder";
    src: url("./asset/fonts/THUNDER/Fonts/Web-TT/Thunder-BoldLC.woff") format("woff"),
    url("./asset/fonts/THUNDER/Fonts/Web-TT/Thunder-BlackLC.ttf") format("opentype");

    }
  

*{
    margin: 0;
    
}
html,
header,
body {
  overflow-x: hidden;
}
header{
   
    background: #FFAF96;
    height: 618px;
    width: 100%;
   
    
}


header  ul{
    display: none;
}

.bigLove{
color: #FF0000;
}

.logo{
    margin: 15px;
    margin-top: 30px; 
    object-fit: contain;
}

.header--top{
    display: flex;
    width: 100%;
    height: 85px;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
 
    
}

.header--top nav{
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
    flex-flow: row nowrap;
    width: 140px;
    margin: 5px;
   
}
.header__nav :hover{
    transform: scale(1.1)
}



nav p{
    font-family: "thunder";
    color: #AF0032;
    font-size: 32px;
    font-weight: 500;
    line-height: 28px;
    margin-left: 10px;
    margin-bottom: 20px;
    margin-top: 40px;
    letter-spacing: 0.06em;    
}

.header__nav img{
    margin-bottom: 20px;
    margin-top: 5px;
}

.header__nav img:hover{
    cursor: pointer;
}

.header--container{
    display: flex;
    justify-content: center;
    margin: 0;
}
.header--block{
    display: flex;
    overflow: hidden;
}

h1{
   
    flex-flow: column nowrap;
    justify-content: center;
    font-family: "thunder";
    font-style: normal;
    font-size: 72px;
    font-weight: 500;
    line-height: 66px;
    color: #AF0032;
    margin: 70px 0 0 120px;
    
    
}

h1 span{
    margin: 0 0 0 -100px;
}


.heartContainer{
    transform: rotate(-10deg);
    margin: 290px 0 0 135px;
    position: absolute;
   
}

.heart {
    background-color: #FF0000;
    display: inline-block;
    height: 40px;
    margin: 0 10px 100px;
    position: relative;
    top: 0;
    width: 40px;
    animation: pulse 1.5s infinite;
    
}

.heart:before,
.heart:after {
    content: "";
    background-color: #ff0000;
    border-radius: 50%;
    height: 40px;
    position: absolute;
    width: 40px;
    animation: pulse 1.5s infinite;
    ;
}

.heart:before {
top: -20px;
left: 0;

}

.heart:after {
left: 20px;
top: 0;
}

.pilot{

position: absolute;
height: 292px;
transform: rotate(-15.62deg);
margin: 210px 0 0 145px;

}

.stars{
   position: absolute;
}

.star1{
    margin: 42px 0 0 93px;
}
.star2{
    margin: 77px 0 0 77px;
    height: 26px;
    width: 26px;
}
.star3{
  margin: 160px 0 0 315px;
}
.star4{
    margin: 295px 0px 0 115px;
    height: 36px;
}


button{
    
    position: absolute;
    background:  #FF0000;
    color: #FFF;
    border-radius: 12px;
    margin: 360px 0 0 20px;
    width: 165px;
    height: 41px;
    border: none;
    font-size: 16px;
    /* need to be change to Landry Gothic*/
    font-family: Verdana, Geneva, Tahoma, sans-serif; 
    font-weight: 600;
    letter-spacing: 0.06em;
}

header button:hover{
    cursor: pointer;
}

/*Container1*/

.container1{
   
    background: #E6DEF7 ;
    height: 623px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    
}

.container1 img{
    position:absolute;
    z-index: 1!important;
    height: 201px;
    
}
.container1 p{
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 600;
    font-size: 17px;
    width: 75%;
    color:#AF0032;
    text-align: center;
    line-height: 24px;
    margin: -60px 0 0 0;
}

.block{
   
    margin: 0 10%;
    width: 80%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.heart--white__container{
    display: absolute;
    transform: rotate(-15deg);
    margin: 110px 0 0 50px;
}

.heart--white {
    background-color: #FFF;
    display: inline-block;
    height: 160px;
    margin: 0 10px 100px;
    position: relative;
    top: 0;
    transform: rotate(-45deg);
    width: 160px;
  }

.heart--white:before,
.heart--white:after {
    content: "";
    background-color: #FFF;
    border-radius: 50%;
    height: 160px;
    position: absolute;
    width: 160px;
}

.heart--white:before {
    top: -80px;
    left: 0;
}

.heart--white:after {
    left: 80px;
    top: 0;
}

.container2{
    height: 1000px;
    width: 100%;
    display: flex;
    flex-direction: column;
}
.container2 .giantBear{
    height:500px;
    width: 100%;
    object-fit: cover;
}

.container2 .productBear{
    height: 250px!important;
    object-fit: cover;
    width: 100%;
}

.container2 .girlandBear{
    height: 250px!important;
    object-fit: cover;
    width: 100%;
    margin-top: -4px;
}
.container2__block--1{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.hugme{
    position: absolute;
    margin: 0 250px 320px 0px;
    
}
.hugme img{
    position: absolute;
   
}
.hugme p{
    position: absolute;
    color: #9679D4;
    font-size: 23px;
    line-height: 24px;
    font-family: "thunder";
    font-weight: 500;
    width: 70px;
    text-align: center;
    margin: 30px 0 0 50px;   
    letter-spacing: 0.05em;    
    
};

.container2__block--2--1{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin-bottom: 14px;
}


.container2__block--2 p{
    position: absolute;
    color: #FFF;
    font-size: 37px;
    font-family: "thunder";
    text-align: center;
    width: 100%;
    margin-top: -145px;
    letter-spacing: 0.06em;
}
.container2__block--2--1:hover + .animationGo{
   color:#9679D4;
}

.animationGo{
    display: flex;
    object-fit: contain;
    overflow: hidden;
    align-items: center;
    justify-content: center;
    position: absolute;
    height: 250px;
    width: 100%;
    z-index: 1;
    transform : scale(0);
    transition: transform 200ms ease-in;
}

.animationGo p{
   
   
    color: #FF0000;
    font-family: "thunder";
    font-weight: 800;
    font-size: 175px;
    margin: -292px 40px 0 0;
}

.heart--white__1{
    transform: rotate(-20deg);
    margin: 150px 0 0 70px;
}

.container2__block--2--1:hover  .animationGo {
    transform : scale(1);
}

.container2__block--2--1:hover{
    cursor: pointer;
}

@keyframes pulse {
    10%{transform: scale(1.03)}
}

